src/main/java/com/example/DiplomaSite/error/DiplomaDefenseDeletionException.java
package com.example.DiplomaSite.error;

public class DiplomaDefenseDeletionException extends RuntimeException{
    public DiplomaDefenseDeletionException(String message, Throwable cause) {
        super(message, cause);
    }
}
